# CI4721_MangoBajito

./: .gitignore  README.md  casos_de_prueba.ipynb  kruskal.cpp  pruebitas.py
Backup_stages/Etapa1/: README.md
Backup_stages/Etapa2/: README.md  run_tests.sh
Backup_stages/Etapa3/: README.md
Etapa1/: programas-en-MangoBajito.ipynb
Etapa2/: CMakeLists.txt  Makefile  README.md  mango-parser.y  run_tests.sh
Etapa2/src/: mango-bajito.cpp  mango-bajito.hpp  mango-lexer.l  mango-parser.y  tac.hpp
Etapa2/suit_test/Asignacion/Errores/: 03-negro.mng
Etapa2/suit_test/Asignacion/Validos/: 01-manguita.mng  02-manguangua.mng  04-higuerote.mng  06-array_mango.mng  07-array-manguita.mng  08-array-manguangua.mng  09-array_negro.mng  11-coliao.mng  12-arrozConMango.mng  13-coliao.mng
Etapa2/suit_test/Operacion/Errores/: 05-decremento.mng
Etapa2/suit_test/Operacion/Validos/: 03-division_decimal.mng  04-division_entera.mng  05-decremento.mng  06-incremento.mng  09-asig_multiplicacion.mng
Etapa2/tests/: 0.mng  0.txt  1.mng  1.txt  2.mng  2.txt  3.mng  3.txt  4.txt  5.mng  5.txt  6.mng  6.txt  7.mng  e12.mng  e14.mng  test.mng
Etapa2/tests/TAC/: 0.mng  1.mng  2.mng  4.mng  5.mng
Etapa3/: Makefile
Etapa3/src/: ast.hpp  main.cpp  mango-bajito.hpp  mango-lexer.l  mango-parser.y
Etapa3/tests/: 0.mng  1.mng  4.mng  6.mng  e11.mng  e12.mng  e13.mng  e14.mng  e17.mng
MangoBajito/: Makefile  README.md  check_tac.sh  fibonacci.asm  final_run_tests.sh  final_uptodate_tests.sh  lenguajes2_run_tests.sh  lenguajes2_uptodate_tests.sh  lenguajes3_run_tests.sh  lenguajes3_uptodate_tests.sh  mango-adobao-0.0.1.vsix  mips.sh  program.sh  remove_zone_identifiers.sh  update_test.sh
MangoBajito/1-Lexer_&_Parser/: Makefile
MangoBajito/1-Lexer_Parser_SymTable_AST/: README.md  run_tests.sh  update_test.sh
MangoBajito/2-TAC/: update_test.sh
MangoBajito/backup_folder1/: CMakeLists.txt
MangoBajito/backup_folder1/src/: main.cpp  mango_bajito.cpp  mango_parser.y
MangoBajito/backup_folder1/tests/Bucle/errors/expected/: 00-variable_for.out
MangoBajito/backup_folder1/tests/Declaracion/errors/: 01-manguita.mng
MangoBajito/backup_folder1/tests/Declaracion/valid/expected/: 00-mango.out  08-array_manguangua.out  10-array_higuerote.out
MangoBajito/backup_folder1/tests/Funcion/errors/: 01-falta_parametros.mng
MangoBajito/backup_folder1/tests/Funcion/errors/expected/: 02-excede_parametros.out
MangoBajito/backup_folder1/tests/Funcion/valid/: 00-definicion.mng
MangoBajito/backup_folder1/tests/Funcion/valid/expected/: 02-lanzate.out
MangoBajito/backup_folder1/tests/Operacion/errors/expected/: 20-negacion.out
MangoBajito/backup_folder1/tests/Operacion/valid/: 07-decremento.mng  17-menor_igual.mng  19-mayor_igual.mng
MangoBajito/backup_folder1/tests/Operacion/valid/expected/: 02-multiplicacion.out  06-potencia.out  08-incremento.out  16-menor_estricto.out
MangoBajito/lib/: mangoadobao.mng
MangoBajito/local/: astrid.mng  jhona.mng  junior.mng
MangoBajito/src/: main.cpp  mango_bajito.cpp  mango_bajito.hpp  mango_lexer.l  mango_parser.y
(+553 files in other folders)
